Внес изменения в сервиса и репозиторий. Тесты проходят